<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="#ffffff"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <RelativeLayout
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_alignParentLeft="true"
                android:id="@+id/txt_cont_date"
                android:textColor="@color/txt_color"
                android:text="2011-08-20 星期三 "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <ImageView
                android:layout_toRightOf="@+id/txt_cont_date"
                android:src="@drawable/wifi"
                android:id="@+id/img_cont_wifi_state"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        <TextView
                android:layout_toRightOf="@+id/img_cont_wifi_state"
                android:id="@+id/txt_cont_msg"
                android:textColor="@color/txt_color"
                android:text="@string/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <TextView
                android:layout_alignParentRight="true"
                android:id="@+id/txt_cont_weather"
                android:text="北京 晴 "
                android:textColor="@color/txt_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:id="@+id/btn_cont_first"
                android:text="@string/str1"
                android:textColor="@color/txt_color"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_cont_second"
                android:text="@string/str2"
                android:textColor="@color/txt_color"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_cont_third"
                android:text="@string/str3"
                android:textColor="@color/txt_color"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_cont_fourth"
                android:text="@string/str4"
                android:textColor="@color/txt_color"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        <Button
                android:id="@+id/btn_cont_fifth"
                android:text="@string/str5"
                android:textColor="@color/txt_color"
                android:layout_weight="1"
                android:layout_gravity="center_horizontal"
                android:background="#ffffff"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="vertical"
            android:id="@+id/fragment_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    </LinearLayout>
</LinearLayout>